<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:id="@+id/song_block"
    >

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="Sample Song"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp" />
...
